tests/fixtures/invalid/break_outside_loop.ny
// Error: break used outside of a loop
fn main() -> i32 {
    break;
    return 0;
}
